--- a/templates/actor/shadowrun6-Vehicle-sheet.html
+++ b/templates/actor/shadowrun6-Vehicle-sheet.html
@@ -16,7 +16,7 @@
 		<div style="display:flex; flex-wrap: wrap;">
       	{{!-- Basics Tab --}}
          <div class="section">
-         	<h2><input data-field="name" type="text" value="{{actor.name}}" placeholder="{{localize 'shadowrun6.name' }}" /></h2>
+         	<h2><input name="name" data-field="name" type="text" value="{{actor.name}}" placeholder="{{localize 'shadowrun6.name' }}" /></h2>
             {{> "systems/shadowrun6-eden/templates/parts/vehicle-stats.html"}}
             {{> "systems/shadowrun6-eden/templates/parts/vehicle-speed.html"}}
          </div>
