--- a/templates/item/shadowrun6-adeptpower-sheet.html
+++ b/templates/item/shadowrun6-adeptpower-sheet.html
@@ -1,7 +1,7 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input type="text" value="{{item.name}}" data-field="name" /></h2>
+        <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92" style="background-color: var(--highlight-color)"/>
         <div class="section">
             <table>
@@ -12,23 +12,21 @@
                 </tr>
                 <tr>
                     <td>
-                        <select data-field="system.activation">
-                            {{selectOptions config.adeptpower_activation selected=item.system.activation
-                            localize=true}}
+                        <select name="adeptPowerActivation" data-field="system.activation">
+                            {{selectOptions config.adeptpower_activation selected=item.system.activation localize=true}}
                         </select>
                     </td>
                     <td>
-                        <input data-field="system.cost" value="{{item.system.cost}}" type="number" class="box centered" />
+                        <input name="cost" data-field="system.cost" value="{{item.system.cost}}" type="number" class="box centered" />
                     </td>
                     <td>
-                        <input style="vertical-align: middle;" type="checkbox" {{checked item.system.hasLevel}}
+                        <input name="hasLevel" style="vertical-align: middle;" type="checkbox" {{checked item.system.hasLevel}}
                             data-field="system.hasLevel" />
                     </td>
                 </tr>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text" data-field="system.description" cols="20"
-                rows="6">{{item.system.description}}</textarea>
+            <textarea name="description" class="box" type="text" data-field="system.description" cols="20" rows="6">{{item.system.description}}</textarea>
         </div>
     </section>
 </form>
