--- a/templates/parts/npc-attributes.html
+++ b/templates/parts/npc-attributes.html
@@ -2,9 +2,9 @@
     	<thead>
     		<tr>
     {{#each config.NPC_ATTRIBUTES as |attributeId|}}
-    		  <th class="attribute2" id="{{attributeId}}">
-    		    <label for="system.attributes.{{attributeId}}.current" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat3 "attrib." attributeId "_short" )}}</label>
-    		  </th>
+				<th class="attribute2" id="{{attributeId}}">
+    		    	<label for="system.attributes.{{attributeId}}.current" title="{{localize (concat "attrib." attributeId )}}">{{localize (concat3 "attrib." attributeId "_short" )}}</label>
+				</th>
     {{/each}}
     		</tr>
     	</thead>
@@ -12,9 +12,9 @@
     		<tr>
     {{#each attributes as |attribute id|}}
     {{#ifIn id ../config.NPC_ATTRIBUTES}}
-    		  <td class="attribute2" id="{{id}}">
-             <input class="centered" data-field="system.attributes.{{id}}.base" type="text" value="{{attribute.base}}" data-dtype="Number">
-    		  </td>
+				<td class="attribute2" id="{{id}}">
+					<input name="attributeBase{{id}}" class="centered" data-field="system.attributes.{{id}}.base" type="text" value="{{attribute.base}}" data-dtype="Number">
+				</td>
     {{/ifIn}}
     {{/each}}
     		</tr>
