--- a/templates/parts/section-armor.html
+++ b/templates/parts/section-armor.html
@@ -19,13 +19,13 @@
 		{{#iff item.type '==' 'gear'}}
 		{{#iff item.system.type '==' "ARMOR"}}
        <tr class="draggable item" data-item-id="{{this.id}}"  title="{{sr6_description item.system 'item'}}">
-       	<td style="margin-right: 1rem"><button type="button" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
+       	<td style="margin-right: 1rem"><button type="button" name="collapseArmor{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
        	<td><label class="switch">
-       	<input type="checkbox" data-item-id="{{this.id}}" data-check="system.usedForPool" {{checked item.system.usedForPool}} type="checkbox" data-dtype="Boolean"/>
+       	<input name="armorUsedForPool{{id}}" type="checkbox" data-item-id="{{this.id}}" data-check="system.usedForPool" {{checked item.system.usedForPool}} type="checkbox" data-dtype="Boolean"/>
                         <span class="shadowrun6-slider round"></span>
                     </label></td>
-         <td class="centered"><input type="text" data-item-id="{{this.id}}" data-field="system.defense" value="{{item.system.defense}}" data-dtype="Number" style="width: 1.5em" /></td>
-         <td class="centered"><input type="text" data-item-id="{{this.id}}" data-field="system.social"  value="{{item.system.social}}" data-dtype="Number" style="width: 1.5em" /></td>
+         <td class="centered"><input name="armorDefense{{id}}" type="text" data-item-id="{{this.id}}" data-field="system.defense" value="{{item.system.defense}}" data-dtype="Number" style="width: 1.5em" /></td>
+         <td class="centered"><input name="armorSocial{{id}}" type="text" data-item-id="{{this.id}}" data-field="system.social"  value="{{item.system.social}}" data-dtype="Number" style="width: 1.5em" /></td>
 			<td class="item-controls">
 				<td class="centered"><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 					class="fas fa-edit"></i></a> <a class="item-control item-delete"
