--- a/templates/parts/section-karma_rep.html
+++ b/templates/parts/section-karma_rep.html
@@ -6,16 +6,16 @@
 	  <tbody>
 	    <tr>
 	      <th style="width: 6em">{{ localize 'shadowrun6.section.karma.karma' }}<th>
-	      <td><input class="box" style="width: 4em" type="text" data-dtype="Number" data-field="system.karma" value="{{system.karma}}"/></td>
-	      <td>{{ localize 'shadowrun6.section.karma.total' }}: <input class="box"  style="width: 4em"type="text" data-dtype="Number" data-field="system.karma_total" value="{{system.karma_total}}"/></td>
+	      <td><input name="karmaRepKarma" class="box" style="width: 4em" type="text" data-dtype="Number" data-field="system.karma" value="{{system.karma}}"/></td>
+	      <td>{{ localize 'shadowrun6.section.karma.total' }}: <input name="karmaRepKarmaTotal" class="box"  style="width: 4em"type="text" data-dtype="Number" data-field="system.karma_total" value="{{system.karma_total}}"/></td>
 	    </tr>
 	    <tr>
 	      <th style="width: 6em">{{ localize 'shadowrun6.section.karma.heat' }}<th>
-	      <td><input class="box" style="width: 4em" type="text" data-dtype="Number" data-field="system.heat" value="{{system.heat}}"/></td>
+	      <td><input name="karmaRepHeat" class="box" style="width: 4em" type="text" data-dtype="Number" data-field="system.heat" value="{{system.heat}}"/></td>
 	    </tr>
 	    <tr>
 	      <th style="width: 6em">{{ localize 'shadowrun6.section.karma.reputation' }}<th>
-	      <td><input class="box" style="width: 4em" type="text" data-dtype="Number" data-field="system.reputation" value="{{system.reputation}}"/></td>
+	      <td><input name="karmaRepReputation" class="box" style="width: 4em" type="text" data-dtype="Number" data-field="system.reputation" value="{{system.reputation}}"/></td>
 	    </tr>
 	  </tbody>
 </table>
