--- a/templates/parts/section-matrixbase.html
+++ b/templates/parts/section-matrixbase.html
@@ -6,14 +6,14 @@
    	<div class="attribute" augmented-ui="b-clip-x exe">
       	<p>{{localize "attrib.res" }}</p>
          <span>{{system.attributes.res.pool}}</span>
-         <input type="hidden" data-dtype="Number" data-field="system.attributes.res.pool" value="8" />
+         <input name="matrixAttResPool" type="hidden" data-dtype="Number" data-field="system.attributes.res.pool" value="8" />
          <div class="field {{id}}Changed">
             <label>{{localize 'shadowrun6.numerical.base'}}</label>
-            <input type="number" data-dtype="Number" data-field="system.attributes.res.base" value="{{system.attributes.res.base}}" placeholder="base" title="{{localize 'shadowrun6.numerical.baseString'}}" min="1" max="6" />
+            <input name="matrixAttResBase" type="number" data-dtype="Number" data-field="system.attributes.res.base" value="{{system.attributes.res.base}}" placeholder="base" title="{{localize 'shadowrun6.numerical.baseString'}}" min="1" max="6" />
          </div>
          <div class="field {{id}}Changed">
             <label>{{localize 'shadowrun6.numerical.mod'}}</label>
-            <input type="number" data-dtype="Number" data-field="system.attributes.res.mod" value="{{system.attributes.res.mod}}" placeholder="±adj" title="{{attribute.modString}}" />
+            <input name="matrixAttResMod" type="number" data-dtype="Number" data-field="system.attributes.res.mod" value="{{system.attributes.res.mod}}" placeholder="±adj" title="{{attribute.modString}}" />
          </div>
 		</div>
    </div>
@@ -24,7 +24,7 @@
 	</div>     
     <div class="edge" style="width: 80px; height:80px">
 		<img src="systems/shadowrun6-eden/images/all-seeing-eye.webp" style="border: 0px; height: auto; width: 80px; z-index: 0; position:absolute; filter: drop-shadow(0 0 4px #000000);" />
-		<input class="edge-value" type="text" data-dtype="Number" data-field="system.overwatch" value="{{system.overwatch}}" />
+		<input name="matrixOverwatch" class="edge-value" type="text" data-dtype="Number" data-field="system.overwatch" value="{{system.overwatch}}" />
     </div>
    </div>
 		<div class="section" style="width:inherit; margin-right: -5px; min-width: 275px;">
@@ -42,23 +42,23 @@
      <tr class="item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
 		   {{#if system.morDef.resonance}}
           <td class="centered">{{system.persona.living.devRating}} &#8608;</td>
-         <td class="centered">{{system.persona.living.base.a}}+<input class="box" data-field="system.persona.living.mod.a" type="text" value="{{system.persona.living.mod.a}}" data-dtype="Number"
+         <td class="centered">{{system.persona.living.base.a}}+<input name="matrixPersonaLivingModA" class="box" data-field="system.persona.living.mod.a" type="text" value="{{system.persona.living.mod.a}}" data-dtype="Number"
 				style="width: 1.5em;" ></td>
-         <td class="centered">{{system.persona.living.base.s}}+<input class="box" data-field="system.persona.living.mod.s" type="text" value="{{system.persona.living.mod.s}}" data-dtype="Number"
+         <td class="centered">{{system.persona.living.base.s}}+<input name="matrixPersonaLivingModS" class="box" data-field="system.persona.living.mod.s" type="text" value="{{system.persona.living.mod.s}}" data-dtype="Number"
 				style="width: 1.5em;" ></td>
-         <td class="centered">{{system.persona.living.base.d}}+<input class="box" data-field="system.persona.living.mod.d" type="text" value="{{system.persona.living.mod.d}}" data-dtype="Number"
+         <td class="centered">{{system.persona.living.base.d}}+<input name="matrixPersonaLivingModD" class="box" data-field="system.persona.living.mod.d" type="text" value="{{system.persona.living.mod.d}}" data-dtype="Number"
 				style="width: 1.5em;" ></td>
-         <td class="centered">{{system.persona.living.base.f}}+<input class="box" data-field="system.persona.living.mod.f" type="text" value="{{system.persona.living.mod.f}}" data-dtype="Number"
+         <td class="centered">{{system.persona.living.base.f}}+<input name="matrixPersonaLivingModF" class="box" data-field="system.persona.living.mod.f" type="text" value="{{system.persona.living.mod.f}}" data-dtype="Number"
 				style="width: 1.5em;" ></td>
         {{else}}
          <td class="centered">{{system.persona.device.base.a}}/{{system.persona.device.base.s}}/{{system.persona.device.base.d}}/{{system.persona.device.base.f}} &#8608;</td>
-         <td class="centered"><input class="box" data-field="system.persona.device.mod.a" type="text" value="{{system.persona.device.mod.a}}" data-dtype="Number"
+         <td class="centered"><input name="matrixPersonaDeviceA" class="box" data-field="system.persona.device.mod.a" type="text" value="{{system.persona.device.mod.a}}" data-dtype="Number"
 				style="width: 2em;" ></td>
-         <td class="centered"><input class="box" data-field="system.persona.device.mod.s" type="text" value="{{system.persona.device.mod.s}}" data-dtype="Number"
+         <td class="centered"><input name="matrixPersonaDeviceS" class="box" data-field="system.persona.device.mod.s" type="text" value="{{system.persona.device.mod.s}}" data-dtype="Number"
 				style="width: 2em;" ></td>
-         <td class="centered"><input class="box" data-field="system.persona.device.mod.d" type="text" value="{{system.persona.device.mod.d}}" data-dtype="Number"
+         <td class="centered"><input name="matrixPersonaDeviceD" class="box" data-field="system.persona.device.mod.d" type="text" value="{{system.persona.device.mod.d}}" data-dtype="Number"
 				style="width: 2em;" ></td>
-         <td class="centered"><input class="box" data-field="system.persona.device.mod.f" type="text" value="{{system.persona.device.mod.f}}" data-dtype="Number"
+         <td class="centered"><input name="matrixPersonaDeviceF" class="box" data-field="system.persona.device.mod.f" type="text" value="{{system.persona.device.mod.f}}" data-dtype="Number"
 				style="width: 2em;" ></td>
     {{/if}}
       </tr>
@@ -77,7 +77,7 @@
 				<td ><b>{{ localize 'shadowrun6.attack_rating.matrix' }}</b></td>
 				<td class="centered">{{system.attackrating.matrix.base}}</td>
 				<td class="centered">
-					<input class="centered" data-field="system.attackrating.matrix.mod" type="text" value="{{system.attackrating.matrix.mod}}" data-dtype="Number"
+					<input name="matrixArMatrixMod" class="centered" data-field="system.attackrating.matrix.mod" type="text" value="{{system.attackrating.matrix.mod}}" data-dtype="Number"
 					style="width: 2em;">
 				</td>
 				<td class="centered" title="{{system.attackrating.matrix.modString}}">{{system.attackrating.matrix.pool}}</td>
@@ -86,7 +86,7 @@
 				<td ><b>{{ localize 'shadowrun6.defense_rating.matrix' }}</b></td>
 				<td class="centered">{{system.defenserating.matrix.base}}</td>
 				<td class="centered">
-					<input class="centered" data-field="system.defenserating.matrix.mod" type="text" value="{{system.defenserating.matrix.mod}}" data-dtype="Number"
+					<input name="matrixDrMatrixMod" class="centered" data-field="system.defenserating.matrix.mod" type="text" value="{{system.defenserating.matrix.mod}}" data-dtype="Number"
 					style="width: 2em;">
 				</td>
 				<td class="centered" title="{{system.defenserating.matrix.modString}}">{{system.defenserating.matrix.pool}}</td>
@@ -95,7 +95,7 @@
 				<td ><b>{{ localize 'shadowrun6.derived.matrix_perception' }}</b></td>
 				<td class="centered">{{system.derived.matrix_perception.base}}</td>
 				<td class="centered">
-					<input class="centered" data-field="system.derived.matrix_perception.mod" type="text" value="{{system.derived.matrix_perception.mod}}" data-dtype="Number"
+					<input name="matrixDerivedPerceptionMod" class="centered" data-field="system.derived.matrix_perception.mod" type="text" value="{{system.derived.matrix_perception.mod}}" data-dtype="Number"
 					style="width: 2em;">
 				</td>
 				<td class="centered" title="{{system.derived.matrix_perception.modString}}">{{system.derived.matrix_perception.pool}}</td>
@@ -103,7 +103,7 @@
 			<tr>
 				<th>{{localize 'shadowrun6.label.device_mode' }}</th>
             <td colspan="3">
-				<select data-field="system.matrixIni" data-field="system.matrixIni" style="background: rgba(255,255,255,0.25); border: 0px; width: 100%">
+				<select name="matrixIni" data-field="system.matrixIni" data-field="system.matrixIni" style="background: rgba(255,255,255,0.25); border: 0px; width: 100%">
 					{{selectOptions config.MATRIX_INITIATIVE_TYPES selected=system.matrixIni localize=true}}
 			   </select>
 				</td>
@@ -113,7 +113,7 @@
 				<td ><b>{{ localize 'shadowrun6.defense.fading' }}</b></td>
 				<td class="centered">{{system.defensepool.fading.base}}</td>
 				<td class="centered">
-					<input class="centered" data-field="system.defensepool.fading.mod" type="text" value="{{system.defensepool.fading.mod}}" data-dtype="Number"
+					<input name="matrixDpFadingMod" class="centered" data-field="system.defensepool.fading.mod" type="text" value="{{system.defensepool.fading.mod}}" data-dtype="Number"
 					style="width: 2em;">
 				</td>
 				<td class="centered" title="{{system.defensepool.fading.modString}}">{{system.defensepool.fading.pool}}</td>
