--- a/templates/parts/section-skills-language.html
+++ b/templates/parts/section-skills-language.html
@@ -9,9 +9,9 @@
        {{#iff item.type '==' 'skill'}}
        {{#iff item.system.genesisID '==' 'language'}}
        <li class="item flexrow" data-item-id="{{item.id}}">
-         <input type="text" value="{{item.name}}" data-field="name" style="width: 10em; flex-grow:4"/>
+         <input name="skillLanguageName{{id}}" type="text" value="{{item.name}}" data-field="name" style="width: 10em; flex-grow:4"/>
          {{!-- Iterate through all attributes on the item and output buttons for any that are formula. --}}
-         <select data-field="system.points" style="width: 8em; flex-grow:3">
+         <select name="skillLanguagePoints" data-field="system.points" style="width: 8em; flex-grow:3">
          	<option value="1" {{#iff item.system.points '==' 1}}selected{{/iff}}>{{ localize 'shadowrun6.section.skills.language-level.normal' }}</option>
          	<option value="2" {{#iff item.system.points '==' 2}}selected{{/iff}}>{{ localize 'shadowrun6.section.skills.language-level.special' }}</option>
          	<option value="3" {{#iff item.system.points '==' 3}}selected{{/iff}}>{{ localize 'shadowrun6.section.skills.language-level.expert' }}</option>
