--- a/templates/parts/section-soakresist.html
+++ b/templates/parts/section-soakresist.html
@@ -13,7 +13,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.derived.defense_rating' }}</b></td>
 				<td class="centered"><label >{{system.defenserating.physical.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defenserating.physical.mod" type="text" value="{{system.defenserating.physical.mod}}" data-dtype="Number"
+				<td class="centered"><input name="soakResistDrPhysMod" class="centered box" data-field="system.defenserating.physical.mod" type="text" value="{{system.defenserating.physical.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defenserating.physical.modString}}">{{system.defenserating.physical.pool}}</td>
 				<td><span class="item-control defense-roll skill-pool"><i class="fas fa-dice-six" style="opacity: 0"></i></span></td>
@@ -32,7 +32,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.defense.physical' }}</b></td>
 				<td class="centered"><label >{{system.defensepool.physical.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defensepool.physical.mod" type="text" value="{{system.defensepool.physical.mod}}" data-dtype="Number"
+				<td class="centered"><input name="soakResistPhysMod" class="centered box" data-field="system.defensepool.physical.mod" type="text" value="{{system.defensepool.physical.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.physical.modString}}">{{system.defensepool.physical.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.physical.pool}}" data-item-id="physical"><i class="fas fa-dice-six"></i></a></td>
@@ -41,7 +41,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.defense.astral' }}</b></td>
 				<td class="centered"><label >{{system.defensepool.astral.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defensepool.astral.mod" type="text" value="{{system.defensepool.astral.mod}}" data-dtype="Number"
+				<td class="centered"><input name="soakResistAstralMod" class="centered box" data-field="system.defensepool.astral.mod" type="text" value="{{system.defensepool.astral.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.astral.modString}}">{{system.defensepool.astral.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.astral.pool}}" data-item-id="astral"><i class="fas fa-dice-six"></i></a></td>
@@ -50,7 +50,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.defense.spells_direct' }}</b></td>
 				<td class="centered"><label >{{system.defensepool.spells_direct.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defensepool.spells_direct.mod" type="text" value="{{system.defensepool.spells_direct.mod}}" data-dtype="Number"
+				<td class="centered"><input name="soakResistSpellsDirMod" class="centered box" data-field="system.defensepool.spells_direct.mod" type="text" value="{{system.defensepool.spells_direct.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.spells_direct.modString}}">{{system.defensepool.spells_direct.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.spells_direct.pool}}" data-item-id="spells_direct"><i class="fas fa-dice-six"></i></a></td>
@@ -59,7 +59,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.defense.spells_indirect' }}</b></td>
 				<td class="centered"><label >{{system.defensepool.spells_indirect.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defensepool.spells_indirect.mod" type="text" value="{{system.defensepool.spells_indirect.mod}}" data-dtype="Number"
+				<td class="centered"><input name="soakResistSpellsIndMod" class="centered box" data-field="system.defensepool.spells_indirect.mod" type="text" value="{{system.defensepool.spells_indirect.mod}}" data-dtype="Number"
 				  style="width: 2em" ></td>
 				<td class="centered" title="{{system.defensepool.spells_indirect.modString}}">{{system.defensepool.spells_indirect.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.spells_indirect.pool}}" data-item-id="spells_indirect"><i class="fas fa-dice-six"></i></a></td>
@@ -68,7 +68,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.defense.toxin' }}</b></td>
 				<td class="centered"><label >{{system.defensepool.toxin.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defensepool.toxin.mod" type="text" value="{{system.defensepool.toxin.mod}}" data-dtype="Number" style="width: 2em"></td>
+				<td class="centered"><input name="soakResistToxinMod" class="centered box" data-field="system.defensepool.toxin.mod" type="text" value="{{system.defensepool.toxin.mod}}" data-dtype="Number" style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.toxin.modString}}">{{system.defensepool.toxin.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.toxin.pool}}" data-item-id="toxin"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
@@ -76,7 +76,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.defense.damage_physical' }}</b></td>
 				<td class="centered"><label >{{system.defensepool.damage_physical.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defensepool.damage_physical.mod" type="text" value="{{system.defensepool.damage_physical.mod}}" data-dtype="Number"
+				<td class="centered"><input name="soakResistPhysDmgMod" class="centered box" data-field="system.defensepool.damage_physical.mod" type="text" value="{{system.defensepool.damage_physical.mod}}" data-dtype="Number"
 				  style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.damage_physical.modString}}">{{system.defensepool.damage_physical.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.damage_physical.pool}}" data-item-id="damage_physical"><i class="fas fa-dice-six"></i></a></td>
@@ -85,7 +85,7 @@
 			<tr>
 				<td><b>{{ localize 'shadowrun6.defense.damage_astral' }}</b></td>
 				<td class="centered"><label >{{system.defensepool.damage_astral.base}}</label></td>
-				<td class="centered"><input class="centered box" data-field="system.defensepool.damage_astral.mod" type="text" value="{{system.defensepool.damage_astral.mod}}" data-dtype="Number"
+				<td class="centered"><input name="soakResistAstralDmgMod" class="centered box" data-field="system.defensepool.damage_astral.mod" type="text" value="{{system.defensepool.damage_astral.mod}}" data-dtype="Number"
 				  style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.damage_astral.modString}}">{{system.defensepool.damage_astral.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.damage_astral.pool}}" data-item-id="damage_astral"><i class="fas fa-dice-six"></i></a></td>
