--- a/templates/parts/section-vehicles.html
+++ b/templates/parts/section-vehicles.html
@@ -21,7 +21,7 @@
 		{{#if (eq item.type 'gear')}}
 		{{#if (eq item.system.type "VEHICLES") }}
        <tr class="draggable item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
-       	<td style="margin-right: 1rem"><button type="button" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
+       	<td style="margin-right: 1rem"><button type="button" name="collapseVehicle{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
          <td class="centered"><label class="small-column" >{{item.system.handlOn}}/{{item.system.handlOff}}</label></td>
          {{#if (eq item.system.accOn item.system.accOff)}}
          <td class="centered"><label class="small-column" >{{item.system.accOn}}</label></td>
