--- a/templates/compendium-actor-npc-sheet.html
+++ b/templates/compendium-actor-npc-sheet.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="header-fields">
 			Hallo
-			<h1><input name="name" type="text" value="{{actor.name}}" placeholder="{{localize 'shadowrun6.name' }}" /></h1>
+			<h1><input name="name" name="name" type="text" value="{{actor.name}}" placeholder="{{localize 'shadowrun6.name' }}" /></h1>
 		</div>
 	</header>
 
