--- a/templates/item/shadowrun6-contact-sheet.html
+++ b/templates/item/shadowrun6-contact-sheet.html
@@ -1,7 +1,7 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input type="text" value="{{item.name}}" data-field="name" /></h2>
+        <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92" style="background-color: var(--highlight-color)"/>
         <div class="section">
             <table>
@@ -12,15 +12,14 @@
                     <th>{{localize 'shadowrun6.contact.favors'}}</th>
                 </tr>
                 <tr>
-                    <td style="width:8em"> <input  class="box" type="text" value="{{item.system.type}}" data-field="system.type"  /></td>
-                    <td class="box centered"> <input  class="box" type="number" value="{{item.system.rating}}" data-field="system.rating" style="width:2em" /></td>
-                    <td class="box centered"> <input  class="box" type="number" value="{{item.system.loyalty}}" data-field="system.loyalty" style="width:2em" /></td>
-                    <td class="box centered"> <input  class="box" type="number" value="{{item.system.favors}}" data-field="system.favors" style="width:2em" /></td>
+                    <td style="width:8em"> <input name="type" class="box" type="text" value="{{item.system.type}}" data-field="system.type"  /></td>
+                    <td class="box centered"> <input name="rating" class="box" type="number" value="{{item.system.rating}}" data-field="system.rating" style="width:2em" /></td>
+                    <td class="box centered"> <input name="loyality" class="box" type="number" value="{{item.system.loyalty}}" data-field="system.loyalty" style="width:2em" /></td>
+                    <td class="box centered"> <input name="favors" class="box" type="number" value="{{item.system.favors}}" data-field="system.favors" style="width:2em" /></td>
                 </tr>
             </table>
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text" data-field="system.description" cols="50"
-                rows="8">{{item.system.description}}</textarea>
+            <textarea name="description" class="box" type="text" data-field="system.description" cols="50" rows="8">{{item.system.description}}</textarea>
         </div>
     </section>
 </form>
