--- a/templates/item/shadowrun6-focus-sheet.html
+++ b/templates/item/shadowrun6-focus-sheet.html
@@ -1,7 +1,7 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input type="text" value="{{item.name}}" data-field="name" /></h2>
+        <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92" style="background-color: var(--highlight-color)"/>
         <div class="section">
 
@@ -12,15 +12,13 @@
                     </tr>
                     <tr style="text-align:center">
                             <td class="centered">
-                                    <input data-field="system.rating" value="{{item.system.rating}}" type="number" class="box centered" style="width:2em"/>
+                                    <input name="rating" data-field="system.rating" value="{{item.system.rating}}" type="number" class="box centered" style="width:2em"/>
                             </td>
                     </tr>
             </table>
 
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text" data-field="system.description" cols="20"
-                rows="6">{{system.description}}</textarea>
-
+            <textarea class="box" type="text" data-field="system.description" cols="20" rows="6">{{system.description}}</textarea>
         </div>
     </section>
 </form>
