--- a/templates/item/shadowrun6-gear-sheet.html
+++ b/templates/item/shadowrun6-gear-sheet.html
@@ -1,7 +1,7 @@
 <form class="flexcol {{cssClass}}" autocomplete="off" style="min-width: 605px; min-width: fit-content;">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input type="text" value="{{item.name}}" data-field="name" /></h2>
+        <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92"
             style="background-color: var(--highlight-color)" />
         <div class="section">
@@ -17,23 +17,23 @@
                 </tr>
                 <tr>
                     <td style="text-align: center">
-                        <select data-field="system.type" data-field="system.type" class="typeselect">
+                        <select name="gearType" data-field="system.type" data-field="system.type" class="typeselect">
                             {{selectOptions config.GEAR_TYPES selected=item.system.type localize=true}}
                         </select>
                     </td>
                     <td style="text-align: center">
-                        <select data-field="system.subtype" data-field="system.subtype" class="subtypeselect">
+                        <select name="gearSubtype" data-field="system.subtype" data-field="system.subtype" class="subtypeselect">
                             {{selectOptions config.subtypeList selected=item.system.subtype localize=true}}
                         </select></td>
 
-                    <td style="text-align: center"><input style="vertical-align: middle;" type="checkbox" {{checked item.system.needsRating}}
+                    <td style="text-align: center"><input name="needsRating" style="vertical-align: middle;" type="checkbox" {{checked item.system.needsRating}}
                             data-field="system.needsRating" /></td>
-                    <td style="text-align: center"><input style="vertical-align: middle;" type="checkbox" {{checked item.system.countable}}
+                    <td style="text-align: center"><input name="countable" style="vertical-align: middle;" type="checkbox" {{checked item.system.countable}}
                             data-field="system.countable" /></td>
 
-                    <td style="text-align: center"><input type="text" value="{{item.system.availDef}}" data-field="system.availDef" class="box centered"
+                    <td style="text-align: center"><input name="availDef" type="text" value="{{item.system.availDef}}" data-field="system.availDef" class="box centered"
                             style="width: 2em" /></td>
-                    <td style="text-align: center"><span  class="input-symbol-nuyen"><input type="text" value="{{item.system.priceDef}}" data-field="system.priceDef" class="box centered"
+                    <td style="text-align: center"><span class="input-symbol-nuyen"><input name="priceDef" type="text" value="{{item.system.priceDef}}" data-field="system.priceDef" class="box centered"
                             style="width: 5em" /></span></td>
                 </tr>
             </table>
@@ -54,33 +54,33 @@
                 {{log "shadowrun6-gear-sheet.html this=" item.system}}
                 <tr>
                     <td style="text-align: right">
-                        <input type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width: 2.5em;" />
+                        <input name="dmg" type="number" value="{{item.system.dmg}}" data-field="system.dmg" class="box centered" style="width: 2.5em;" />
                     </td>
                     <td style="text-align: left">
-                        <select data-field="system.stun">
+                        <select name="gearStun" data-field="system.stun">
                             {{selectOptions config.WEAPON_STUN_OPTION selected=item.system.stun localize=true}}
                         </select>
                     </td>
 					<td style="width: 4em; text-align: center">
                         <span style="vertical-align: middle;">{{localize 'shadowrun6.item.mode_ss'}}</span>
-                        <input style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.SS}} data-field="system.modes.SS" " />
+                        <input name="modesSS" style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.SS}} data-field="system.modes.SS" " />
                     </td>
                     <td style="width: 4em; text-align: center">
                         <span style="vertical-align: middle;">{{localize 'shadowrun6.item.mode_sa'}}</span>
-                        <input style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.SA}} data-field="system.modes.SA" />
+                        <input name="modesSA" style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.SA}} data-field="system.modes.SA" />
                     </td>
                     <td style="width: 4em; text-align: center">
                         <span style="vertical-align: middle;">{{localize 'shadowrun6.item.mode_bf'}}</span>
-                        <input style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.BF}} data-field="system.modes.BF" />
+                        <input name="modesBF" style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.BF}} data-field="system.modes.BF" />
                     </td>
                     <td style="width: 4em; text-align: center">
                         <span style="vertical-align: middle;">{{localize 'shadowrun6.item.mode_fa'}}</span>
-                        <input style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.FA}} data-field="system.modes.FA" />
+                        <input name="modesFA" style="vertical-align: middle;" type="checkbox" {{checked item.system.modes.FA}} data-field="system.modes.FA" />
                     </td>
 
                     {{#each item.system.attackRating as |arating id|}}
                     <td style="text-align: center" data-array="system.attackRating">
-                        <input type="number" value="{{arating}}" data-array-field data-index="{{id}}" style="width:2em" class="centered box" />
+                        <input name="attackRating{{id}}" type="number" value="{{arating}}" data-array-field data-index="{{id}}" style="width:2em" class="centered box" />
                     </td>
                     {{/each}}
                 </tr>
@@ -97,23 +97,23 @@
                 </tr>
                 <tr>
                     <td style="text-align: center">
-                        <select data-field="system.skill" data-field="system.skill">
+                        <select name="gearSkill" data-field="system.skill" data-field="system.skill">
                             <option value="">-</option>
                             {{selectOptions config.SKILLS_WEAPON selected=item.system.skill localize=true}}
                         </select>
                     </td>
                     <td style="text-align: center">
                         {{#if item.system.skill}}
-        	   			<select data-field="system.skillSpec" data-field="system.skillSpec">
+        	   			<select name="gearSkillSpec" data-field="system.skillSpec" data-field="system.skillSpec">
                             {{selectOptions (lookup config.skill_special item.system.skill) selected=item.system.skillSpec localize=true}}
          				</select>
                          {{/if}}
                     </td>
                     <td style="text-align: center">
                         {{#if (eq item.system.type "WEAPON_CLOSE_COMBAT")}}
-                        <input style="vertical-align: middle;" type="checkbox" {{checked item.system.strWeapon}} data-field="system.strWeapon" />
+                        <input name="strWeapon" style="vertical-align: middle;" type="checkbox" {{checked item.system.strWeapon}} data-field="system.strWeapon" />
                         {{else}}
-                        <input type="text" value="{{item.system.ammocap}}" data-field="system.ammocap" class="box centered" style="width: 3.4em" />
+                        <input name="ammocap" type="text" value="{{item.system.ammocap}}" data-field="system.ammocap" class="box centered" style="width: 3.4em" />
                         {{/if}}
                     </td>
                 </tr>
@@ -129,15 +129,15 @@
                     <th>{{localize 'shadowrun6.item.natural'}}</th>
                 </tr>
                 <tr>
-                    <td><input type="number" value="{{item.system.defense}}" data-field="system.defense"
+                    <td><input name="defense" type="number" value="{{item.system.defense}}" data-field="system.defense"
                             class="box centered" />
                     </td>
-                    <td><input type="number" value="{{item.system.capacity}}" data-field="system.capacity"
+                    <td><input name="capacity" type="number" value="{{item.system.capacity}}" data-field="system.capacity"
                             class="box centered" /></td>
-                    <td><input type="number" value="{{item.system.social}}" data-field="system.social"
+                    <td><input name="social" type="number" value="{{item.system.social}}" data-field="system.social"
                             class="box centered" />
                     </td>
-                    <td><input style="vertical-align: middle;" type="checkbox" {{checked item.system.natural}}
+                    <td><input name="natural" style="vertical-align: middle;" type="checkbox" {{checked item.system.natural}}
                             data-field="system.natural" /></td>
                 </tr>
             </table>
@@ -148,7 +148,7 @@
             (eq item.system.type "NANOWARE")
             )}}
             <label for="ware_essence">{{localize 'shadowrun6.item.essence'}}</label>
-            <input type="number" value="{{item.system.essence}}" data-field="system.essence" id="ware_essence"
+            <input name="essenceBioNano" type="number" value="{{item.system.essence}}" data-field="system.essence" id="ware_essence"
                 class="box centered" />
             {{/if}}
             <!-- ********** CYBERWARE ********** -->
@@ -159,9 +159,9 @@
                     <th>{{localize 'shadowrun6.item.capacity'}}</th>
                 </tr>
                 <tr>
-                    <td> <input type="number" value="{{item.system.essence}}" data-field="system.essence" id="ware_essence"
+                    <td> <input name="essenceCyber" type="number" value="{{item.system.essence}}" data-field="system.essence" id="ware_essence"
                             class="box centered" /></td>
-                    <td> <input type="number" value="{{item.system.capacity}}" data-field="system.capacity" id="ware_cap"
+                    <td> <input name="capacity" type="number" value="{{item.system.capacity}}" data-field="system.capacity" id="ware_cap"
                             class="box centered" /></td>
                 </tr>
             </table>
@@ -181,16 +181,16 @@
                 </tr>
                 <tr>
                     <td class="box centered"> 
-                        <input type="number" value="{{item.system.devRating}}" data-field="system.devRating" class="box centered" style="width:2em" />
+                        <input name="devRating" type="number" value="{{item.system.devRating}}" data-field="system.devRating" class="box centered" style="width:2em" />
                     </td>
                     <td class="box centered"> 
-                        <input type="number" value="{{item.system.progSlots}}" data-field="system.progSlots" class="box centered" style="width:2em" />
+                        <input name="progSlots" type="number" value="{{item.system.progSlots}}" data-field="system.progSlots" class="box centered" style="width:2em" />
                     </td>
                     <td class="box centered"> 
-                        <input type="number" value="{{item.system.d}}" data-field="system.d" class="box centered" style="width:2em" />
+                        <input name="matrixD" type="number" value="{{item.system.d}}" data-field="system.d" class="box centered" style="width:2em" />
                     </td>
                     <td class="box centered"> 
-                        <input type="number" value="{{item.system.f}}" data-field="system.f" class="box centered" style="width:2em" />
+                        <input name="matrixF" type="number" value="{{item.system.f}}" data-field="system.f" class="box centered" style="width:2em" />
                     </td>
                 </tr>
             </table>
@@ -205,13 +205,13 @@
                     <th>{{localize 'shadowrun6.label.sleaze.short'}}</th>
                 </tr>
                 <tr>
-                    <td class="box centered"> <input type="number" value="{{item.system.devRating}}"
+                    <td class="box centered"> <input name="devRatingDeck" type="number" value="{{item.system.devRating}}"
                             data-field="system.devRating" class="box centered" style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.progSlots}}"
+                    <td class="box centered"> <input name="progSlotsDeck" type="number" value="{{item.system.progSlots}}"
                             data-field="system.progSlots" class="box centered" style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.a}}" data-field="system.a"
+                    <td class="box centered"> <input name="matrixA" type="number" value="{{item.system.a}}" data-field="system.a"
                             class="box centered" style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.s}}" data-field="system.s"
+                    <td class="box centered"> <input name="matrixS" type="number" value="{{item.system.s}}" data-field="system.s"
                             class="box centered" style="width:2em" /></td>
                 </tr>
             </table>
@@ -230,19 +230,19 @@
                     <th colspan="2">{{ localize 'shadowrun6.section.vehicles.column.vtype' }}</th>
                 </tr>
                 <tr>
-                    <td class="box centered" colspan="2"> <input type="number" value="{{item.system.handlOn}}"
-                            data-field="system.handlOn" class="box centered" style="width:2em" /> / <input type="number"
+                    <td class="box centered" colspan="2"> <input name="handlOn" type="number" value="{{item.system.handlOn}}"
+                            data-field="system.handlOn" class="box centered" style="width:2em" /> / <input name="" type="number"
                             value="{{item.system.handlOff}}" data-field="system.handlOff" class="box centered"
                             style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.accOn}}" data-field="system.accOn"
-                            class="box centered" style="width:2em" /> / <input type="number" value="{{item.system.accOff}}" data-field="system.accOff"
+                    <td class="box centered"> <input name="accOn" type="number" value="{{item.system.accOn}}" data-field="system.accOn"
+                            class="box centered" style="width:2em" /> / <input name="accOff" type="number" value="{{item.system.accOff}}" data-field="system.accOff"
                             class="box centered" style="width:2em" /> </td>
-                    <td class="box centered"> <input type="number" value="{{item.system.spdiOn}}" data-field="system.spdiOn"
-                            class="box centered" style="width:2em" /> / <input type="number" value="{{item.system.spdiOff}}" data-field="system.spdiOff"
+                    <td class="box centered"> <input name="spdiOn" type="number" value="{{item.system.spdiOn}}" data-field="system.spdiOn"
+                            class="box centered" style="width:2em" /> / <input name="spdiOff" type="number" value="{{item.system.spdiOff}}" data-field="system.spdiOff"
                             class="box centered" style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.tspd}}" data-field="system.tspd"
+                    <td class="box centered"> <input name="tspd" type="number" value="{{item.system.tspd}}" data-field="system.tspd"
                             class="box centered" style="width:3em" /></td>
-                    <td colspan="2"> <select data-field="system.vtype" data-field="system.vtype" class="typeselect">
+                    <td colspan="2"> <select name="gearVtype" data-field="system.vtype" data-field="system.vtype" class="typeselect">
                             {{selectOptions config.VEHICLE_TYPE selected=item.system.vtype localize=true}}
                         </select>
                     </td>
@@ -257,16 +257,16 @@
                     {{/if}}
                 </tr>
                 <tr>
-                    <td class="box centered"> <input type="number" value="{{item.system.bod}}" data-field="system.bod"
+                    <td class="box centered"> <input name="bod" type="number" value="{{item.system.bod}}" data-field="system.bod"
                             class="box centered" style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.arm}}" data-field="system.arm"
+                    <td class="box centered"> <input name="arm" type="number" value="{{item.system.arm}}" data-field="system.arm"
                             class="box centered" style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.pil}}" data-field="system.pil"
+                    <td class="box centered"> <input name="pil" type="number" value="{{item.system.pil}}" data-field="system.pil"
                             class="box centered" style="width:2em" /></td>
-                    <td class="box centered"> <input type="number" value="{{item.system.sen}}" data-field="system.sen"
+                    <td class="box centered"> <input name="sen" type="number" value="{{item.system.sen}}" data-field="system.sen"
                             class="box centered" style="width:2em" /></td>
                     {{#if (eq item.system.type "VEHICLES")}}
-                    <td class="box centered"> <input type="number" value="{{item.system.sea}}" data-field="system.sea"
+                    <td class="box centered"> <input name="sea" type="number" value="{{item.system.sea}}" data-field="system.sea"
                             class="box centered" style="width:2em" /></td>
                     {{/if}}
 
@@ -274,12 +274,10 @@
             </table>
             {{/if}}
             <h3>{{localize 'shadowrun6.item.accessories'}}</h3>
-            <textarea class="box" type="text" data-field="system.accessories" cols="60"
-                rows="4">{{item.system.accessories}}</textarea>
+            <textarea name="accessories" class="box" type="text" data-field="system.accessories" cols="60" rows="4">{{item.system.accessories}}</textarea>
             <!-- ********** Beschreibung ********** -->
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text" data-field="system.description" cols="60"
-                rows="6">{{item.system.description}}</textarea>
+            <textarea name="description" class="box" type="text" data-field="system.description" cols="60" rows="6">{{item.system.description}}</textarea>
         </div>
     </section>
 </form>
