--- a/templates/item/shadowrun6-martialarttech-sheet.html
+++ b/templates/item/shadowrun6-martialarttech-sheet.html
@@ -1,12 +1,11 @@
 <form class="flexcol {{cssClass}}" autocomplete="off">
     {{!-- Sheet Body --}}
     <section class="sheet-body">
-        <h2><input type="text" value="{{item.name}}" data-field="name"/></h2>
+        <h2><input name="name" type="text" value="{{item.name}}" data-field="name"/></h2>
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92" style="background-color: var(--highlight-color)"/>
         <div class="section">
             <h3>{{localize 'shadowrun6.item.description'}}</h3>
-            <textarea class="box" type="text"  data-field="system.description"
-                cols="50" rows="6">{{system.description}}</textarea>
+            <textarea name="description" class="box" type="text"  data-field="system.description" cols="50" rows="6">{{system.description}}</textarea>
         </div>
     </section>
 </form>
