--- a/templates/parts/attributes-augmented.html
+++ b/templates/parts/attributes-augmented.html
@@ -3,14 +3,14 @@
     <div class="attribute" augmented-ui="b-clip-x exe">
          <p>{{localize (concat "attrib." id )}}</p>
          <span>{{attribute.pool}}</span>
-         <input type="hidden" data-dtype="Number" data-field="system.attributes.{{id}}.pool" value="8" />
+         <input name="attributesPool{{id}}" type="hidden" data-dtype="Number" data-field="system.attributes.{{id}}.pool" value="8" />
          <div class="field {{id}}Changed">
             <label>{{localize 'shadowrun6.numerical.base'}}</label>
-            <input type="number" data-dtype="Number" data-field="system.attributes.{{id}}.base" value="{{attribute.base}}" placeholder="base" title="{{localize 'shadowrun6.numerical.baseString'}}" min="1" max="6" />
+            <input name="attributesBase{{id}}" type="number" data-dtype="Number" data-field="system.attributes.{{id}}.base" value="{{attribute.base}}" placeholder="base" title="{{localize 'shadowrun6.numerical.baseString'}}" min="1" max="6" />
          </div>
          <div class="field {{id}}Changed">
             <label>{{localize 'shadowrun6.numerical.mod'}}</label>
-            <input type="number" data-dtype="Number" data-field="system.attributes.{{id}}.mod" value="{{attribute.mod}}" placeholder="±adj" title="{{attribute.modString}}" />
+            <input name="attributesMod{{id}}" type="number" data-dtype="Number" data-field="system.attributes.{{id}}.mod" value="{{attribute.mod}}" placeholder="±adj" title="{{attribute.modString}}" />
          </div>
       </div>
     {{/ifIn}}
