--- a/templates/parts/npc_edit_grunt.html
+++ b/templates/parts/npc_edit_grunt.html
@@ -1,7 +1,7 @@
 <div style="flex:3">
 
 	<!-- TODO implement grunt rules -->
-	<!-- <input id="grunt_isgrunt" name="gruntrules" type="checkbox" value="{{system.gruntrules}}" />
+	<!-- <input name="isGrunt" id="grunt_isgrunt" name="gruntrules" type="checkbox" value="{{system.gruntrules}}" />
 	<label for="grunt_isgrunt">{{localize 'shadowrun6.npc.gruntrules' }}</label> -->
 
 </div>
