--- a/templates/parts/npc_edit_spirit.html
+++ b/templates/parts/npc_edit_spirit.html
@@ -4,7 +4,7 @@
 </select>
 
 <label for="spirit_force">{{localize "shadowrun6.label.force"}}</label>
-<select id="spirit_force" name="system.rating" data-field="system.rating" style="border: 0px">
+<select name="spirit_force" id="spirit_force" name="system.rating" data-field="system.rating" style="border: 0px">
 	{{selectOptions config.RATING selected=system.rating}}
 </select>
 
