--- a/templates/parts/section-adeptpowers.html
+++ b/templates/parts/section-adeptpowers.html
@@ -16,8 +16,8 @@
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'adeptpower'}}
 		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td> <input type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}"/></td>
-			<td class="centered" style="width: 2em"> <input class="centered" type="text" value="{{item.system.cost}}" data-field="system.cost" data-type="Number"/></td>
+			<td> <input name="adeptPowerName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}"/></td>
+			<td class="centered" style="width: 2em"> <input name="adeptPowerCost{{id}}" class="centered" type="text" value="{{item.system.cost}}" data-field="system.cost" data-type="Number"/></td>
 			<td class="centered"><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 					class="fas fa-edit"></i></a> <a class="item-control item-delete"
 				title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
