--- a/templates/parts/section-ammo.html
+++ b/templates/parts/section-ammo.html
@@ -11,7 +11,7 @@
 		{{#iff item.system.type '==' "AMMUNITION"}}
        <tr class="draggable item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
        	<td style="margin-right: 1rem"><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
-         <td><input class="centered box" type="text"     data-item-id="{{this.id}}" data-field="system.count" type="text"     value="{{item.system.count}}" data-dtype="Number" style="width: 1.5em" /></td>
+         <td><input name="ammoCount{{id}}" class="centered box" type="text"     data-item-id="{{this.id}}" data-field="system.count" type="text"     value="{{item.system.count}}" data-dtype="Number" style="width: 1.5em" /></td>
 			<td class="item-controls">
 				<td class="centered"><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 					class="fas fa-edit"></i></a> <a class="item-control item-delete"
