--- a/templates/parts/section-contacts.html
+++ b/templates/parts/section-contacts.html
@@ -19,11 +19,11 @@
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'contact'}}
 		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td style="width: 8em"> <input type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
-			<td class="centered" style="width: 3em"> <input type="text" value="{{item.system.type}}" data-field="system.type" class="secondary" disabled></td>
-			<td class="centered" style="width: 1em"> <input type="text" value="{{item.system.rating}}" data-field="system.rating" class="secondary" disabled></td>
-			<td class="centered" style="width: 1em"> <input type="text" value="{{item.system.loyalty}}" data-field="system.loyalty" class="secondary" disabled></td>
-			<td class="centered" style="width: 1em"> <input type="number" value="{{item.system.favors}}" data-field="system.favors" class="box" /></td>
+			<td style="width: 8em"> <input name="contactName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
+			<td class="centered" style="width: 3em"> <input name="contactType{{id}}" type="text" value="{{item.system.type}}" data-field="system.type" class="secondary" disabled></td>
+			<td class="centered" style="width: 1em"> <input name="contactRating{{id}}" type="text" value="{{item.system.rating}}" data-field="system.rating" class="secondary" disabled></td>
+			<td class="centered" style="width: 1em"> <input name="contactLoyality{{id}}" type="text" value="{{item.system.loyalty}}" data-field="system.loyalty" class="secondary" disabled></td>
+			<td class="centered" style="width: 1em"> <input name="contactFavors{{id}}" type="number" value="{{item.system.favors}}" data-field="system.favors" class="box" /></td>
 			<td class="centered" style="width: 2em">
 				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 				class="fas fa-edit"></i></a> <a class="item-control item-delete"
