--- a/templates/parts/section-gear.html
+++ b/templates/parts/section-gear.html
@@ -19,22 +19,22 @@
 		<tr class="item list-item" data-item-id="{{item.id}}">
        	<td style="margin-right: 1rem; width: 0.7em;">
 		   {{#if item.system.accessories }}
-       	<button type="button" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
+       	<button type="button" name="collapseGear{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}}" data-item-id="{{this.id}}">+</button>
        	{{else}}
-       	<button type="button" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}} empty" data-item-id="{{this.id}}">+</button>
+       	<button type="button" name="collapseGear{{id}}" class="collapsible {{item.flags.shadowrun6-eden.collapse-state}} empty" data-item-id="{{this.id}}">+</button>
        	{{/if}}
        	</td>
-			<td> <input type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
+			<td> <input name="gearName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
 			<td style="width: 2em" class="centered">
-			{{#if item.system.needsRating}}
-			<input type="text" value="{{item.system.rating}}" data-field="system.rating" title="{{item.system.rating}}"/>
+			{{#if item.system.needsRating}} 
+			<input name= "gearRating{{id}}" type="text" value="{{item.system.rating}}" data-field="system.rating" title="{{item.system.rating}}"/>
 			{{else}}
 			-
 			{{/if}}
 			</td>
 			<td style="width: 2em" class="centered">
 			{{#if item.system.countable}}
-			<input type="text" value="{{item.system.count}}" data-field="system.count" title="{{item.system.count}}"/>
+			<input name="gearCount{{id}}" type="text" value="{{item.system.count}}" data-field="system.count" title="{{item.system.count}}"/>
 			{{else}}
 			1
 			{{/if}}		
