--- a/templates/parts/section-magicbase.html
+++ b/templates/parts/section-magicbase.html
@@ -4,14 +4,14 @@
    	<div class="attribute" augmented-ui="b-clip-x exe">
       	<p>{{localize "attrib.mag" }}</p>
          <span>{{system.attributes.mag.pool}}</span>
-         <input type="hidden" data-dtype="Number" data-field="system.attributes.mag.pool" value="8" />
+         <input name="magicAttributePool" type="hidden" data-dtype="Number" data-field="system.attributes.mag.pool" value="8" />
          <div class="field {{id}}Changed">
             <label>{{localize 'shadowrun6.numerical.base'}}</label>
-            <input type="number" data-dtype="Number" data-field="system.attributes.mag.base" value="{{system.attributes.mag.base}}" placeholder="base" title="{{localize 'shadowrun6.numerical.baseString'}}" min="1" max="6" />
+            <input name="magicAttributeBase" type="number" data-dtype="Number" data-field="system.attributes.mag.base" value="{{system.attributes.mag.base}}" placeholder="base" title="{{localize 'shadowrun6.numerical.baseString'}}" min="1" max="6" />
          </div>
          <div class="field {{id}}Changed">
             <label>{{localize 'shadowrun6.numerical.mod'}}</label>
-            <input type="number" data-dtype="Number" data-field="system.attributes.mag.mod" value="{{system.attributes.mag.mod}}" placeholder="±adj" title="{{attribute.modString}}" />
+            <input name="magicAttributeMod" type="number" data-dtype="Number" data-field="system.attributes.mag.mod" value="{{system.attributes.mag.mod}}" placeholder="±adj" title="{{attribute.modString}}" />
          </div>
 		</div>
    </div>
@@ -21,7 +21,7 @@
 			<tr>
 				<td colspan="2"><b>{{localize "shadowrun6.tradition.attribute"}}</b></td>
 				<td colspan="3">
-					<select data-field="system.tradition.attribute">
+					<select name="traditionAttribute" data-field="system.tradition.attribute">
 						{{selectOptions config.tradition_attributes localize="true" selected=system.tradition.attribute}}
       				</select>
 				</td>
@@ -36,19 +36,19 @@
 			<tr>
 				<td ><b>{{ localize 'shadowrun6.attack_rating.astral' }}</b></td>
 				<td class="centered">{{system.attackrating.astral.base}}</td>
-				<td class="centered"><input class="centered" data-field="system.attackrating.astral.mod" type="text" value="{{system.attackrating.astral.mod}}" data-dtype="Number" style="width: 2em"></td>
+				<td class="centered"><input name="magicArAstralMod" class="centered" data-field="system.attackrating.astral.mod" type="text" value="{{system.attackrating.astral.mod}}" data-dtype="Number" style="width: 2em"></td>
 				<td class="centered" title="{{system.attackrating.astral.modString}}">{{system.attackrating.astral.pool}}</td>
 			</tr>
 			<tr>
 				<td ><b>{{ localize 'shadowrun6.defense_rating.astral' }}</b></td>
 				<td class="centered">{{system.defenserating.astral.base}}</td>
-				<td class="centered"><input class="centered" data-field="system.defenserating.astral.mod" type="text" value="{{system.defenserating.astral.mod}}" data-dtype="Number" style="width: 2em"></td>
+				<td class="centered"><input name="magicDrAstralMod" class="centered" data-field="system.defenserating.astral.mod" type="text" value="{{system.defenserating.astral.mod}}" data-dtype="Number" style="width: 2em"></td>
 				<td class="centered" title="{{system.defenserating.astral.modString}}">{{system.defenserating.astral.pool}}</td>
 			</tr>
 			<tr>
 				<td ><b>{{ localize 'shadowrun6.defense.drain' }}</b></td>
 				<td class="centered">{{system.defensepool.drain.base}}</td>
-				<td class="centered"><input class="centered" data-field="system.defensepool.drain.mod" type="text" value="{{system.defensepool.drain.mod}}" data-dtype="Number" style="width: 2em"></td>
+				<td class="centered"><input name="magicDpAstralMod" class="centered" data-field="system.defensepool.drain.mod" type="text" value="{{system.defensepool.drain.mod}}" data-dtype="Number" style="width: 2em"></td>
 				<td class="centered" title="{{system.defensepool.drain.modString}}">{{system.defensepool.drain.pool}}</td>
 				<td><a class="item-control defense-roll skill-pool" data-pool="{{system.defensepool.drain.pool}}" data-item-id="drain"><i class="fas fa-dice-six"></i></a></td>
 			</tr>
