--- a/templates/parts/vehicle-brain.html
+++ b/templates/parts/vehicle-brain.html
@@ -10,7 +10,7 @@
        <tr class="draggable item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
        	<td><label class="item-name" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
-       	<td><input type="number" data-field="item.system.rating" value="{{item.system.rating}}"  style="width: 2em" /></td>
+       	<td><input name="vehicleRating{{id}}" type="number" data-field="item.system.rating" value="{{item.system.rating}}"  style="width: 2em" /></td>
 			<td class="item-controls">
 				<td class="centered"><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 					class="fas fa-edit"></i></a> <a class="item-control item-delete"
